Functioning version of app with 10 gifs appearing per click on default buttons. Next step is new button integration.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>GifTastic</title>
   </head>
   <body>
-    <div class="button-box">
-      <button class="gif-btn" data-animal="puppy">Puppy</button>
-      <button class="gif-btn" data-animal="kitten">Kitten</button>
-      <button class="gif-btn" data-animal="snake">Snake</button>
-    </div>
+    <div class="button-box"></div>
 
     <div class="gif-box"></div>
 
