Added the search function that adds a new button based on user input and flows with the click event

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>GifTastic</title>
   </head>
   <body>
+    <div class="button-search">
+      <input type="text" id="user-input" placeholder="add new button!" />
+      <button id="create-new">Create</button>
+    </div>
+
     <div class="button-box"></div>
 
     <div class="gif-box"></div>
