Beginning CSS styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GifTastic</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="button-box"></div>
     <div class="button-search">
       <input type="text" id="user-input" placeholder="add new button!" />
       <button id="create-new">Create</button>
     </div>
-
-    <div class="button-box"></div>
 
     <div class="gif-box"></div>
 
