--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="button-search">
       <input type="text" id="user-input" placeholder="add new button!" />
       <button id="create-new">Create</button>
+      <input type="text" id="user-input" placeholder="gifs per page" />
+      <button id="gif-limit">Change</button>
     </div>
 
     <div class="gif-box"></div>
